--- a/ReactNative/noovies/package.json
+++ b/ReactNative/noovies/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
+    "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-asset": "~8.3.3",
