--- a/ReactNative/noovies/package.json
+++ b/ReactNative/noovies/package.json
@@ -13,19 +13,23 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-asset": "~8.3.3",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-web-swiper": "^2.2.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
