--- a/ReactNative/instagram/package.json
+++ b/ReactNative/instagram/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^2.30.2",
     "apollo-server": "^3.3.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.2",
     "graphql-tools": "^7.0.2"
