seeProfile,login,divide and conquer

--- a/ReactNative/instagram/package.json
+++ b/ReactNative/instagram/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.2",
-    "graphql-tools": "^7.0.2"
+    "graphql-tools": "^7.0.2",
+    "jsonwebtoken": "^8.5.1"
   }
 }
