--- a/ReactNative/instagram/package.json
+++ b/ReactNative/instagram/package.json
@@ -20,10 +20,14 @@
   "dependencies": {
     "@prisma/client": "^2.30.2",
     "apollo-server": "^3.3.0",
+    "apollo-server-express": "^3.3.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.2",
     "graphql-tools": "^7.0.2",
-    "jsonwebtoken": "^8.5.1"
+    "graphql-upload": "^12.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   }
 }
