--- a/ReactNative/instagram/package.json
+++ b/ReactNative/instagram/package.json
@@ -18,6 +18,7 @@
     "prisma": "^2.30.2"
   },
   "dependencies": {
+    "@paljs/plugins": "^3.8.3",
     "@prisma/client": "^2.30.2",
     "apollo-server": "^3.3.0",
     "apollo-server-express": "^3.3.0",
