--- a/ReactNative/instagram/package.json
+++ b/ReactNative/instagram/package.json
@@ -22,6 +22,8 @@
     "@prisma/client": "^2.30.2",
     "apollo-server": "^3.3.0",
     "apollo-server-express": "^3.3.0",
+    "aws": "^0.0.3-2",
+    "aws-sdk": "^2.983.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -29,6 +31,7 @@
     "graphql-tools": "^7.0.2",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sdk": "^0.5.0"
   }
 }
