--- a/ReactNative/instagram/package.json
+++ b/ReactNative/instagram/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.2",
+    "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^7.0.2",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
