--- a/ReactNative/instagram/instagram-web/package.json
+++ b/ReactNative/instagram/instagram-web/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.15.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sanitize-html": "^2.5.0",
     "styled-components": "^5.3.1",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.1.2"
