--- a/ReactNative/instagram/instagram-native/package.json
+++ b/ReactNative/instagram/instagram-native/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.13",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -17,6 +18,7 @@
     "expo-asset": "~8.3.3",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "graphql": "^15.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.16.1",
