--- a/ReactNative/instagram/instagram-native/package.json
+++ b/ReactNative/instagram/instagram-native/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.13",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
