firebase/auth testing

--- a/ReactNative/social-coin/package.json
+++ b/ReactNative/social-coin/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/auth": "^13.0.1",
     "expo": "~43.0.2",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
