--- a/ReactNative/social-coin/package.json
+++ b/ReactNative/social-coin/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
+    "react-query": "^3.33.7",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
