--- a/ReactNative/social-coin/package.json
+++ b/ReactNative/social-coin/package.json
@@ -22,9 +22,11 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "react-query": "^3.33.7",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "victory-native": "^36.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
