--- a/ReactNative/myLog/package.json
+++ b/ReactNative/myLog/package.json
@@ -15,9 +15,11 @@
     "@react-navigation/native-stack": "^6.6.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.17.9",
