--- a/ReactNative/myLog/package.json
+++ b/ReactNative/myLog/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "date-fns": "^2.28.0",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-get-random-values": "^1.7.2",
