--- a/ReactNative/myLog/package.json
+++ b/ReactNative/myLog/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "date-fns": "^2.28.0",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-calendars": "^1.1282.0",
     "react-native-get-random-values": "^1.7.2",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
